--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI= mongodb+srv://FF2L:OfS5NKyFey4NFhUn@cluster0.m3d3hoc.mongodb.net/Chat-App?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI= 
 JWT_SECRET=your_jwt_secret_key
-EMAIL_USER= hotanloc9519@gmail.com
-EMAIL_PASS= szbu kqff exqa kfrs
+EMAIL_USER=
+EMAIL_PASS=
