--- a/ChatWeb/chat-app/package.json
+++ b/ChatWeb/chat-app/package.json
@@ -18,15 +18,18 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@primeng/themes": "^19.0.6",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "ngx-toastr": "^19.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
