--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "npm": "^11.3.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   }
