--- a/ChatApp/package.json
+++ b/ChatApp/package.json
@@ -31,6 +31,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
     "react-native-web": "~0.19.13",
