--- a/ChatApp/package.json
+++ b/ChatApp/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.0",
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.1",
@@ -19,22 +19,23 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.37",
+    "expo": "53.0.9",
     "expo-document-picker": "^13.0.3",
-    "expo-image-picker": "~16.0.6",
-    "expo-status-bar": "~2.0.1",
+    "expo-image-picker": "~16.1.4",
+    "expo-status-bar": "~2.2.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-emoji-selector": "^0.2.0",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1",
-    "react-native-web": "~0.19.13",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
